# aoc2020

./: Makefile  README.md
.github/: dependabot.yml
.github/workflows/: bench.yml  hs-bench.yml  hs.yml  hyperfine.yml  kt-bench.yml  kt.yml  py-bench.yml  py.yml  rs-bench.yml  rs.yml
docs/: Gemfile  aoc2020-bench.html  hyperfine.md  index.md  results.txt
docs/criterion/day 1 part 1/base/: estimates.json  raw.csv  sample.json  tukey.json
docs/criterion/day 1 part 1/new/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
docs/criterion/day 1 part 1/report/: index.html
docs/criterion/day 1 part 2/base/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
docs/criterion/day 1 part 2/new/: estimates.json  raw.csv  sample.json  tukey.json
docs/criterion/day 1 part 2/report/: index.html
docs/criterion/day 10 part 1/base/: benchmark.json  estimates.json  raw.csv  (+2 more)
docs/criterion/report/: index.html
hs/: .gitignore  ChangeLog.md  LICENSE  README.md  day11.txt  day13.txt  day14.txt  day17.txt  day18.txt  day19.txt  day21.txt  day22.txt  day23.txt  day24.txt  day5.txt  package.yaml  stack.yaml
hs/app/: Main.lhs  VizDay5.hs
hs/app/cbits/: main.c
hs/bench/: Main.hs
hs/src/: Common.hs  Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Machine.hs
hs/test/: CommonSpec.hs  Day10Spec.hs  Day11Spec.hs  Day12Spec.hs  Day13Spec.hs  Day14Spec.hs  Day15Spec.hs  Day16Spec.hs  Day17Spec.hs  Day18Spec.hs  Day19Spec.hs  Day1Spec.hs  Day20Spec.hs  Day21Spec.hs  Day22Spec.hs  Day23Spec.hs  Day24Spec.hs  Day25Spec.hs  Day2Spec.hs  Day3Spec.hs  Day4Spec.hs  Day5Spec.hs  Day6Spec.hs  Day7Spec.hs  Day8Spec.hs  Day9Spec.hs
kt/: .gitignore  README.md  build.gradle.kts  detekt-baseline.xml  gradle.properties  settings.gradle.kts
py/: .gitignore  LICENSE  MANIFEST.in  Pipfile  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
py/src/aoc2020/: day1.py  day1.txt  day10.py  day10.txt  day11.py  day11.txt  day12.py  day12.txt  day13.py  day13.txt  day14.py  day14.txt  day15.py  day15.txt  day16.py  day16.txt  day17.py  day17.txt  day18.py  day18.txt  day19.py  day19.txt  day2.py  day2.txt  day20.py  day20.txt  day21.py  day21.txt  day22.py  day22.txt  day23.py  day23.txt  day24.py  day24.txt  day25.py  day25.txt  day3.py  day3.txt  day4.py  day4.txt  (+13 more)
py/tests/: __init__.py  test_benchmark.py  test_day1.py  test_day2.py  test_day20.py  test_day3.py
rs/: Cargo.toml  README.md  build.rs  day1.txt  day10.txt  day12.txt  day15.txt  day16.txt  day18.txt  day2.txt  day20.txt  day25.txt  day3.txt  day4.txt  day6.txt  day7.txt  day8.txt  day9.txt
rs/benches/: criterion.rs
rs/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  machine.rs  main.rs  util.rs
rs/tests/: day20_test.rs
(+565 files in other folders)
