[metadata]
name = aoc2020
version = attr: aoc2020.VERSION
url = https://github.com/ephemient/aoc2020/tree/main/py
author = Daniel Lin
author_email = ephemient@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: BSD
    Operating System :: OS Independent
license = Simplified BSD
license_file = LICENSE
description = Advent of Code 2020 - my answers
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any

[options]
zip_safe = True
python_requires = >=3.8
packages=find:
package_dir=
    =src
include_package_data = True

[options.entry_points]
console_scripts =
    aoc2020 = aoc2020.main:main
aoc2020.days =
    1 = aoc2020.day1:parts
    2 = aoc2020.day2:parts
    3 = aoc2020.day3:parts
    4 = aoc2020.day4:parts
    5 = aoc2020.day5:parts

[options.packages.find]
where=src

[options.package_data]
* = day*.txt

[tool:pytest]
testpaths = tests
