[metadata]
name = aoc2020
version = attr: aoc2020.VERSION
url = https://github.com/ephemient/aoc2020/tree/main/py
author = Daniel Lin
author_email = ephemient@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: BSD
    Operating System :: OS Independent
license = Simplified BSD
license_file = LICENSE
description = Advent of Code 2020 - my answers
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any

[options]
zip_safe = True
python_requires = >=3.9
packages=find:
package_dir=
    =src
include_package_data = True

[options.entry_points]
console_scripts =
    aoc2020 = aoc2020.main:main
aoc2020.days =
    1 = aoc2020.day1:parts
    2 = aoc2020.day2:parts
    3 = aoc2020.day3:parts
    4 = aoc2020.day4:parts
    5 = aoc2020.day5:parts
    6 = aoc2020.day6:parts
    7 = aoc2020.day7:parts
    8 = aoc2020.day8:parts
    9 = aoc2020.day9:parts
    10 = aoc2020.day10:parts
    11 = aoc2020.day11:parts
    12 = aoc2020.day12:parts
    13 = aoc2020.day13:parts
    14 = aoc2020.day14:parts
    15 = aoc2020.day15:parts

[options.packages.find]
where=src

[options.package_data]
* = day*.txt
